# graphiti

.cursor/: mcp.json
.cursor/rules/graphiti/: graphiti-graphiti-core-schema.mdc  graphiti-knowledge-graph-maintenance.mdc  graphiti-mcp-core-rules.mdc
graphiti_core/: edges.py  nodes.py
graphiti_core/search/: search_utils.py
graphiti_core/utils/maintenance/: community_operations.py
mcp_server/: Dockerfile  README.md  custom_servers.yaml  docker-compose.yml  entity_registry.py  entrypoint.sh  generate_compose.py  graphiti-mcp-repo.md  graphiti-mcp-server.md  graphiti_mcp_server.py  mcp-projects.yaml  pyproject.toml  repomix.config.json
mcp_server/.ai/plans/: improve-directory-structure-plan.md  refactor-architecture-plan.md  refactor-cli-plan.md  refactor-cli-plan.md.bak
mcp_server/entity_types/: __init__.py
mcp_server/entity_types/--help/: entity.py
mcp_server/entity_types/candidates/: Candidate.py  Certification.py  Education.py  Insight.py  Skill.py  WorkExperience.py
mcp_server/graphiti_cli/: commands.py  core.py  main.py  yaml_utils.py
mcp_server/rules/: graphiti-mcp-core-rules.md
mcp_server/scripts/: README.md  _yaml_helper.py  graphiti
server/graph_service/: zep_graphiti.py
